2004-01-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/Makefile.am: Append $(EXEEXT) to executables in TESTS.

	* src/verbs.cpp (sp_action_get_title): Get rid of fixed-sized buffer.

	* src/nodepath.cpp: Miscellaneous cleanups including fixing
	erroneous indentation, changing `g_list_length(foo) == 0' to `foo
	== NULL', removing unused function closest_of_three, specifying
	some functions as `static', adding doc.

	* src/inkscape.cpp (inkscape_remove_desktop): Change
	`g_slist_length (foo) == 0' to `foo == NULL'.

	* src/dyna-draw-context.cpp (fit_and_split_calligraphics): Fix the
	calculation of BEZIER_MAX_LENGTH.
	Add assertions that the corresponding buffers haven't been overrun.

2004-01-03  Ted Gould <ted@gould.cx>

	* src/helper/bezier-utils.cpp, src/inkscape-stock.h:
	  Fixing some Doxygen errors.

2004-01-03  MenTaLguY <mental@rydia.net>

	* src/inkscape.cpp, src/inkscape.h, src/main.cpp:
	  fixes to preference loading

	* src/uri-reference.h: documented Inkscape::URIReference

	* src/sp-item.cpp: fixed double hunref problem

	* src/sp-item.cpp, src/uri-references.h, src/uri-references.cpp:
	reworked Inkscape::URIReference a little

	* src/sp-item.cpp: masks now use Inkscape::URIReference as well

2004-01-02  MenTaLguY <mental@rydia.net>

	* src/shortcuts.cpp: zoom in shortcut fix for german and other
	  keyboards from schumaml

	* configure.in: added SigC++ 1.2 dependency

	* src/document-private.h, src/document.h, src/document.cpp,
	  src/sp-item.h, src/sp-item.cpp, src/uri-reference.h,
	  src/uri-reference.cpp: rewrote URI monitoring code using SigC++

	* src/inkscape.cpp: fix some portability issues

	* src/inkscape.cpp, src/widgets/icon.cpp, src/monostd.h: cleaning up
	  more platform stuff

	* src/dir-util.cpp, src/dir-util.h, src/dialogs/export.cpp:
	  remove sp_filename_from_path(); use g_path_from_filename instead

2004-01-02  Alexander Clausen <alex@skip86.com>
	